crates/strider/tests/snapshots/v3__aarch64be__stack__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x210170:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x210308:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x2101b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x7:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "19" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "13" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x2101f8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "19" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v23" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v23" [color="#888888", style=dashed];
  "v23" -> "19" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "19" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x210344:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v29" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v29" [color="#888888", style=dashed];
  "v29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "31" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "25" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v34" [color="#888888", style=dashed];
  "v34" -> "31" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v36" [color="#888888", style=dashed];
  "v36" -> "31" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "33" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v40" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v40" [color="#888888", style=dashed];
  "v40" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "25" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v47" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v47" [color="#888888", style=dashed];
  "v47" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "19" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "19" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v51" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v51" [color="#888888", style=dashed];
  "v51" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "13" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "49" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "13" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "54" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "7" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0xffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "58" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "1" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "62" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "63" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "66" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "69" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "72" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "74" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "72" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "75" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "77" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "77" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "75" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
